# SRF_Postmortem_WebDB

./: .gitignore  README.md  pyproject.toml  requirements.txt  seed_db.py  test_watch.py  watchdog_flow.html  watchdog_flow_v2.html  실행방법.txt
config/: config.yaml  config.yaml.example  config_backup.yaml  config_original.yaml
data/: event_20260509_073032.parquet
data/append/: append-merge.py
src/: import_job.py  main.py  orchestrator.py
src/classifier/: classifier.py  datatypes.py
src/core/: channel_utils.py  config.py  exceptions.py  logger.py  utils.py
src/db/: models.py  repository.py  schema.py  similarity.py
src/pipeline/: append_merge.py  classifier.py  datatypes.py  email_sender.py  grouper.py  preprocessor.py  reporter.py  rule_engine.py  visualizer.py
src/templates/report/: batch_summary.md.j2  email_body.md.j2  report.html.j2  summary.txt.j2
src/web/: pipeline_manager.py  server.py
src/web/static/css/: style.css
src/web/static/js/: charts.js
src/web/templates/: base.html  event_detail.html  index.html  settings.html  stats.html
